clean action file

--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -2,7 +2,7 @@ name: Swift
 
 on:
   push:
-    branches: [ master , feature/windows-ci]
+    branches: [ master ]
   pull_request:
     branches: [ master ]
 
